2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAssignmentExpression):
	Fixed a bad cast, which was causing bug 234.

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitPostUnaryExpressionField)
	(EmitPreUnaryIncrementExpressionArray):
	Fix bad bytecodes when performing increment
	operators on sub-integers (bugs 127, 223).

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteBlock)
	(DefiniteSwitchStatement, DefiniteTryStatement):
	Changed the definite algorithm to quit checking
	variables that went out of scope, fixing bug
	253 and related.

2001-05-06  ??  <kumaran@alumni.stanford.org>

	* src/control.cpp (ProcessBodies): fix
	timestamp assert failure on Windows builds
	fixes bugs 128, 406. (by way of Eric).

2001-05-04  Pascal Davoust  <davoustp@yahoo.com>

	* control.cpp (Control): fix MSVC build break
	because of duplicate variables in for loops.

2001-05-04  Eric Blake  <ebb9@email.byu.edu>

	* src/lookup.h (IsConstant): 
	* src/lookup.cpp (IsConstant, CheckStringConstant): 
	Fix the regression from 1.12, bug 417 -
	constant string expressions should now
	be correct.

2001-05-04  ??  <vajoczki@yahoo.com>

	* src/bytecode.cpp (EmitSwitchStatement):
	Workaround for Sun JVM TABLESWITCH bug in JDK
	1.2, 1.3 which causes a VerifyError (bug 167,
	jacks 14.10-runtime-verifier-1)

2001-05-01  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (FindVariableMember)
	(ProcessAmbiguousName, ProcessFieldAccess):
	Fixed and consolidated code which processes
	qualified field access, to wipe out core
	dumps mentioned in bug 178.
	(ProcessSuperExpression): Fixed typo

2001-05-01  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile.am (jikespg):
	* src/Makefile.in (jikespg):
	Use $(JIKESPG) instead of hardcoded jikespg.

2001-05-01  Mo DeJong  <mdejong@redhat.com>

	* src/ast.h (DYNAMIC_CAST):
	* src/lookup.cpp: Add new DYNAMIC_CAST method, it
	will make use of the dynamic_cast<> operator